--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pomodoro</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="/vite.svg"
+		/>
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<link
+			href="./src/style.css"
+			rel="stylesheet"
+		/>
+
+		<title>Pomodoro</title>
+	</head>
+	<body class="bg-gray-500">
+		<div id="app"></div>
+		<script
+			type="module"
+			src="/src/main.js"
+		></script>
+	</body>
 </html>
