--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link
 			rel="icon"
 			type="image/svg+xml"
-			href="/vite.svg"
+			href="/logo.svg"
 		/>
 		<meta
 			name="viewport"
@@ -13,6 +13,19 @@
 		/>
 		<link
 			href="./src/style.css"
+			rel="stylesheet"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.googleapis.com"
+		/>
+		<link
+			rel="preconnect"
+			href="https://fonts.gstatic.com"
+			crossorigin
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
 
