chore: add link to the manifest

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
 			href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			rel="manifest"
+			href="/manifest.webmanifest"
+		/>
 
 		<title>Pomodoro</title>
 	</head>
